# kit-mhash-calc

./: CMakeLists.txt
src/: main.c  version.c  version.h
